--- a/action.yml
+++ b/action.yml
@@ -25,19 +25,23 @@ runs:
       shell: bash
       run: |
         git status &> git_changes.txt
+        echo "------------------------------------ Start Of git_changes.txt -----------------"
+        cat git_changes.txt
+        echo "------------------------------------ End Of git_changes.txt ------------------"
     - name: ReSharper CLI CleanupCode - Modification Validation
       shell: bash
-      run: |
-        echo "Start Changes"
-        cat git_changes.txt
-        echo "End Changes"
+      run: |        
         export linesModified=$(grep "modified:" git_changes.txt | wc -l)
+        echo "Modified lines: $linesModified"
         if test $linesModified -gt 0
         then
+          export CLEANUP_CHANGES=yarp
           echo "CLEANUP_CHANGES=yarp" >> $GITHUB_ENV
         else
+          export CLEANUP_CHANGES=narp
           echo "CLEANUP_CHANGES=narp" >> $GITHUB_ENV
         fi
+        echo "CLEANUP_CHANGES: $CLEANUP_CHANGES"
     - name: Set GITHUB_TOKEN from parameter.
       shell: bash
       run: |
@@ -52,7 +56,6 @@ runs:
         git commit -am "Automated formatting changes."
         git push
         echo "Changes were applied, build exiting to restart with cleaned up code."
-        exit 1
     - name: ReSharper CLI CleanupCode - No Changes
       if: env.CLEANUP_CHANGES == 'narp'
       shell: bash
