--- a/action.yml
+++ b/action.yml
@@ -24,6 +24,7 @@ runs:
     - name: ReSharper CLI CleanupCode - Git Status Check
       shell: bash
       run: |
+        git reset --hard HEAD -- nuget.config
         git status &> git_changes.txt
         echo "------------------------------------ Start Of git_changes.txt -----------------"
         cat git_changes.txt
@@ -41,7 +42,7 @@ runs:
           export CODE_CLEANUP_CHANGES=narp
           echo "CODE_CLEANUP_CHANGES=narp" >> $GITHUB_ENV
         fi
-        echo "CODE_CLEANUP_CHANGES: $CODE_CLEANUP_CHANGES"
+        echo "CODE_CLEANUP_CHANGES: $CODE_CLEANUP_CHANGES env ${{ env.CODE_CLEANUP_CHANGES }}"
     - name: Set GITHUB_TOKEN from parameter.
       shell: bash
       run: |
@@ -51,12 +52,12 @@ runs:
       shell: bash
       run: |
         rm git_changes.txt
-        git checkout -- nuget.config
+       
         git config --global user.name "Build Action"
         git config --global user.email "build@letsonboard.com"
         git commit -am "Automated formatting changes."
-        git push
-        echo "Changes were applied, build exiting to restart with cleaned up code."
+        
+        echo "Changes were applied."
     - name: ReSharper CLI CleanupCode - No Changes
       if: env.CODE_CLEANUP_CHANGES == 'narp'
       shell: bash
